# logger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: Logger.h
src/: Logger.cpp
tests/: test.cpp
